# Cleverly_Dashboard_V.1.2

./: .gitignore  .replit  admin.db  calendly_enriched_events.csv  cancelled  combined_output.csv  data_pipeline.py  data_pipeline2.py  data_preprocessing_pipe.py  database.py  enhanced_lead_prediction.py  fetch_calendly_data.py  init_db.py  lead_prediction.py  leadnet_core.py  lp_model_training.py  main.py  model.pkl  monday_extract_groups.py  monday_extract_groups_old.py  predict_leads.py  predictions.csv  pyproject.toml  requirements.txt  retrain_model.py  setup_db.py  test.py
attached_assets/: Pasted--Serving-Flask-app-main-Debug-mode-off-WARNING-This-is-a-development-server-Do-not-use-it--1747258696308.txt  Pasted--Serving-Flask-app-main-Debug-mode-off-WARNING-This-is-a-development-server-Do-not-use-it--1747258756861.txt  Pasted--Serving-Flask-app-main-Debug-mode-off-WARNING-This-is-a-development-server-Do-not-use-it--1748861640002.txt  Pasted--Serving-Flask-app-main-Debug-mode-off-WARNING-This-is-a-development-server-Do-not-use-it-i-1747256083048.txt  Pasted--app-route-apply-filters-LinkedIn-methods-POST-def-apply-filters-LinkedIn-try--1752520549953_1752520549954.txt  Pasted--app-route-apply-filters-google-ads-methods-POST-def-apply-filters-google-ads-try--1752492582275_1752492582276.txt  Pasted--app-route-merge-calendly-data-methods-POST-login-required-def-merge-calendly-data--1751063098509_1751063098509.txt  Pasted--base-ryok3n-Reiyos-Mac-mini-Cleverly-python-leadnet-core-py-2025-07-15-03-15-41-402-INFO-Ini-1752530284781_1752530284782.txt  (+19 more)
instance/: database.db
(+71 files in other folders)
